# libxlsxwriter_open_template

./: .gitignore  CMakeLists.txt  LICENCE  Makefile.in  README.md  configure.ac  libxlsxwriter_open_template.h  test.c
